# app/domains/services/pathway/pathway.routes.js
@@ -6,5 +6,7 @@ const verifyToken = require('../../../middlewares/auth/jwt/jwt.verify');
 const pathwayController = require('./pathway.controller');
 
 pathwayRouter.post('/create-chat', verifyToken, pathwayController.create);
+pathwayRouter.get('/read-chat', verifyToken, pathwayController.read);
+pathwayRouter.put('/continue-chat', verifyToken, pathwayController.update);
 
 module.exports = pathwayRouter;
